<resources>
    <string name="app_name">TidePrediction</string>
    <string name="showTides">Show Tides</string>
    <string name="dateSlect">2016/12/31</string>
    <string name="locationSelect">Select City</string>
    <string name="selectCity">Select City</string>
    <string name="selectDate">Select Date</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="tide">Tide</string>

    <string name="dateLabel">Date</string>
    <string name="timeLabel">Time</string>
    <string name="dayLabel">Day</string>
    <string name="tideLabel">Tide</string>

    <string-array name="myCities">
        <item>Florence</item>
        <item>Depoe</item>
        <item>Coos</item>
    </string-array>

</resources>
