<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectCity"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectCity"
        android:id="@+id/spinner"
        android:entries="@array/myCities"
        android:layout_gravity="center_horizontal"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_gravity="center_horizontal"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showTides"
        android:id="@+id/showTideButton"
        android:onClick="sendMessage"
        android:layout_gravity="center_horizontal" />
</LinearLayout>