<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateLabel"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/dayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dayLabel"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp"
        android:layout_alignTop="@+id/timeTextView"
        android:layout_toRightOf="@+id/dateTextView"
        android:layout_toEndOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeLabel"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_alignTop="@+id/heightTextView"
        android:layout_toLeftOf="@+id/heightTextView"
        android:layout_toStartOf="@+id/heightTextView" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tideLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="8dp" />


        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fastScrollEnabled="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp">

        </ListView>


</RelativeLayout>
